<resources>
    <string name="app_name">MaTricks</string>
    <string name="TapButton">Tap Anywhere to Continue</string>
    <string name="Transpose_code">
        
#include&lt;iostream&gt;\n
\n
using namespace std;\n
\n
int row = 3, col = 4;\n
int matrix[3][4] = {{1,2,3,4},{11,21,31,41},\n{12,22,32,42}};\n
\n
void transpose()\n
{\n
    int temp;\n
\n
        for(int i=0;i&lt;row;i++)\n
    {\n
        for(int j=i;j&lt;col;j++)\n
        {\n
            temp = matrix[i][j];\n
            matrix[i][j] = matrix[j][i];\n
            matrix[j][i] = temp;\n
        }\n
    }\n
\n
    temp = col;\n
    col = row;\n
    row = temp;\n
}\n
\n
void display()\n
{\n
    for(int i=0;i&lt;row;i++)\n
    {\n
        for(int j=0;j&lt;col;j++)\n
        {\n
            cout&lt;&lt;matrix[i][j]&lt;&lt;\"\\t\";\n
        }\n
\n
        cout&lt;&lt;endl;\n
    }\n
}\n
\n
int main()\n
{\n
    cout&lt;&lt;\"MATRIX : \"&lt;&lt;endl;\n
    display();\n
\n
    transpose();\n
\n
    cout"&lt;&lt;""TRANSPOSE MATRIX : ""&lt;&lt;endl;\n
    display();\n
\n
    return 0;\n
}\n

</string>
    <string name="transpose_heading">Transpose of a Matrix</string>
    <string name="antiSpiral_Heading">Printing Anti-Spiral</string>
    <string name="antiSpiralcode">

#include&lt;iostream&gt;										\n
#include&lt;vector&gt;										\n
#include&lt;stack&gt;										\n
										\n
using namespace std;										\n
										\n
vector&lt;vector&lt;int&gt;&gt; matrix {{1,2,3,4,5},\n{6,7,8,9,10},{11,12,13,14,15},{16,17,18,19,20},{21,22,23,24,25}};\n	\n
stack &lt;int&gt; stackSpiral;				\n
										\n
void transpose()										\n
{										\n
    int temp;										\n
										\n
    for(int i=0;i&lt;matrix.size();i++)					\n
    {										\n
        for(int j=i;j&lt;matrix[0].size();j++)					\n
        {										\n
            temp = matrix[i][j];						\n
            matrix[i][j] = matrix[j][i];				\n
            matrix[j][i] = temp;			\n
        }										\n
    }										\n
										\n
}										\n
										\n
void display()										\n
{										\n
    for(int i=0;i&lt;matrix.size();i++)							\n
    {										\n
        for(int j=0;j&lt;matrix[0].size();j++)						\n
        {										\n
            cout&lt;&lt;matrix[i][j]&lt;&lt;\"\\t\";							\n
        }										\n
        cout&lt;&lt;endl;							\n
    }										\n
}										\n
										\n
void rotate90()										\n
{										\n
    int temp;										\n
										\n
    transpose();										\n
										\n
    for(int i=0;i&lt;matrix.size();i++)							\n
    {										\n
        for(int j=0;j&lt;matrix[0].size()/2;j++)							\n
        {										\n
            temp = matrix[i][j];								\n
            matrix[i][j] = matrix[i][matrix[0].size() - j - 1];							\n
            matrix[i][matrix[0].size() - j - 1] = temp;								\n
        }										\n
    }										\n
										\n
}										\n
										\n
void printLine()										\n
{										\n
    for(int i=0;i&lt;matrix[0].size()-1;i++)										\n
    {										\n
        stackSpiral.push(matrix[0][i]);										\n
    }										\n
										\n
    for(int i=0;i&lt;matrix.size();i++)										\n
    {										\n
        stackSpiral.push(matrix[i][matrix[i].size()-1]);										\n
        matrix[i].erase(matrix[i].begin() + matrix[i].size()-1, matrix[i].begin() + matrix[i].size());		\n
    }										\n
										\n
    matrix.erase(matrix.begin(), matrix.begin() + 1);										\n
										\n
}										\n
										\n
int main()										\n
{										\n
    cout&lt;&lt;\"MATRIX : \"&lt;&lt;endl;										\n
    display();										\n
										\n
    cout&lt;&lt;endl&lt;&lt;\"SPIRAL PRINTING : \"&lt;&lt;endl;									\n
										\n
    while(matrix.size() != 0)										\n
    {										\n
        printLine();										\n
        rotate90();										\n
        rotate90();										\n
    }										\n
										\n
    cout&lt;&lt;endl;										\n
										\n
    while(stackSpiral.empty()!= true)										\n
    {										\n
        cout&lt;&lt;stackSpiral.top()&lt;&lt;\" -> \";									\n
        stackSpiral.pop();										\n
    }										\n
										\n
    return 0;										\n
}										\n
										\n

    </string>
    <string name="back_button">Back</string>
    <string name="front_button">Next</string>
    <string name="approach_button">Tell me the approach</string>
    <string name="hint_code_button">Maybe, a hint will do !</string>
    <string name="hide_code_button">Hide Code</string>
    <string name="codeAntiSpiral">

        The problem is to print the matrix in the anti-spiral traversed order.
        \n
        \n
        Tap once on the program heading to return to the previous screen.
        \n
        \n
        Long-press on the program heading, to view code.
        \n
        \n

    </string>
    <string name="stochastic_matrix_heading">Stochastic Matrix</string>
    <string name="stochastic_content">

        The \'<b>Stochastic Matrix</b>\' otherwise called the <b>Probability Matrix</b> or the <b>Markov Matrix</b>,
        is one which has non-negative real valued entries.\n
        \n
        Based on the sum, these matrices may be classified into three : \n
        \n
        1. Right Stochastic Matrix ( <i>Row-wise sum == 1</i> )\n\n
        2. Left Stochastic Matrix ( <i>Column-wise sum == 1</i> )\n\n
        3. Doubly Stochastic Matrix ( <i>Row-wise sum == 1 and column-wise sum == 1</i> )\n\n
        \n
        As the name suggests, the entries of the matrix, are probabilities, hence they have to
        be in the range [0 - 1], inclusive.\n
        \n
        \n
        <b>Extra :</b>\n
        \n
        1. According to the <b>Sinkhorn\'s Theorem</b>, any matrix with strictly positive values can
        be made Doubly Stochastic by pre- and post- multiplication with diagonal matrices.\n
        \n
        2. The product of two Doubly Stochastic matrices is again a Doubly Stochastic matrix.\n

    </string>
    <string name="hessenberg_heading">Hessenberg Matrix</string>
    <string name="hessenberg_content">

        The <b>Hessenberg Matrix</b> is one which has zeroes as its elements above its first
        super-diagonal or below its first sub-diagonal. It is a square-matrix, that is almost triangular.\n
        \n
        In the case of zeroes below the first sub-diagonal, the matrix is named an <b>upper-hessenberg matrix</b>,
        and in the other case it is called a <b>lower-hessenberg matrix</b>.\n
        \n
        \n
        <b>Why is this important ?</b>\n
        \n
        Linear Algebra algorithms require less computational effort when they are applied to triangular matrices.
        This is extended to Hessenberg Matrices as well which is an almost-triangular matrix.\n
        \n
        If it is found difficult to convert a general matrix into a triangular-matrix, conversion to a
        Hessenberg Matrix is the next idea thought of.\n
        \n
        A general matrix may be converted to a Hessenberg Matrix using say, the Householder\'s Transformation,
        in a finite number of steps. This can be further reduced to a triangular matrix through
        Shifted QR-Factorisation, or other iterative procedures.
        \n

    </string>
    <string name="idempotent_matrix_button">Idempotent Matrix</string>
    <string name="idempotent_content">

        We might remember of the idempotent law we\'ve used in set theory, or boolean algebra or in any other field.
        Well, if you did not, no issues, here is the definition.\n
        \n
        Mathematically,\n
        \n
        If \'A\' is a matrix, the A<sup><small>2</small></sup> = A\n
        \n
        This can be extended to A<sup><small>n</small></sup> = A, by induction.\n
        \n
        That is, if the matrix is multiplied with itself, then the product turns out to be the same matrix.\n
        \n
        One immediate point we can make after this statement is that, the matrix to be idempotent has to
        necessarily be a square matrix.\n
        \n
        Wait, but why?\n
        \n
        We know that for multiplication of matrices to be defined, the order of the matrices have to be
        \'m * n\' and \'n * p\' in the general case. Here, since we multiply the same matrix with itself, \'m\' has to
        be equal to \'n\'.
        \n
        <b>Properties : </b>\n
        \n
        1. The matrix is always diagonalisable, and has eigenvalues \'0\' or \'1\'.\n
        2. The trace of the matrix is equal to the rank of the matrix.\n
        3. The trace is hence always an integer.\n
        4. Identity matrix is the only non-singular idempotent matrix.\n
        \n


    </string>
    <string name="involutory_matrix_button">Involutory Matrix</string>
    <string name="involutory_content">

        The <b>Involutory Matrix</b> has its inverse equal to itself, hence the name. In other words,
        let there be a matrix \'A\', then, A = A<sup><small>-1</small></sup> A sup&gt;\n
        \n
        or\n
        \n
        A<sup><small>2</small></sup> = I\n
        \n
        An involutory matrix which is also symmetric is orthogonal. In other words,\n
        \n
        Involutory Matrix + Symmetric Matrix =&gt; Orthogonal Matrix\n
        \n
        <b>Propreties : </b>\n
        \n
        Let \'A\' be an involutory matrix, then,\n
        \n
        1. Determinant of \'A\' = +1 or -1\n
        2. \'A\' is involutory iff (1/2)*( A + I ) is idempotent\n
        3. All powers of \'A\' are involutory, if power is odd - the result is \'A\' and \'I\' if power is even.\n
        \n

    </string>
    <string name="orthogonal_matrix_button">Orthogonal Matrix</string>
    <string name="orthogonal_content">

        An <b>Orthogonal Matrix</b> is one which when multiplied with its transpose, yields an identity matrix.\n
        \n
        With the ame argument, one may also state that the inverse of an orthogonal matrix is the transpose of the original matrix.

    </string>
    <string name="binary_matrix_button">Binary Matrix</string>
    <string name="binary_content">

        A <b>Binary Matrix</b> is one which only has either of the two entries \'0\' or \'1\'.

    </string>
    <string name="sparse_matrix_button">Sparse Matrix</string>
    <string name="sparse_content">

        A <b>Sparse Matrix</b> is one which has fewer connections amongst all possible connections. The opposite of
        this type is the dense matrix which has more number of connections when compared to the total number of connections.
    </string>
    <string name="adjoint_matrix_button">Adjoint Matrix</string>
    <string name="cofactor_matrix_button">Cofactor Matrix</string>
    <string name="trace_matrix_button">Trace of Matrix</string>
    <string name="matrixsum_button">Sum of Matrices</string>
    <string name="sum_dets_button">Sum of Determinants</string>
    <string name="matrices_intution_heading">Matrices : Intuition</string>
    <string name="determinants_intution_heading">Determinants : Intuition</string>
    <string name="multiplying_matrices_heading">Multiplying Matrices</string>
    <string name="diagonalisation_heading">Diagonalisation of Matrices</string>
    <string name="eigenvalue_heading">Eigenvalue</string>
</resources>