<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".AntiSpiral">

    <ScrollView
        android:id="@+id/scrollerid"
        android:layout_width="303dp"
        android:layout_height="344dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593">

        <TextView
            android:id="@+id/code"
            android:layout_width="366dp"
            android:layout_height="611dp"
            android:text="@string/antiSpiralcode"
            android:textColor="#000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

    </ScrollView>


    <Button
        android:id="@+id/approachAntiSpiralButton"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_button1"
        android:text="@string/approach_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_button1"
        android:onClick="hintAntiSpiral"
        android:text="@string/hint_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/problemAntiSpiral"
        android:layout_width="298dp"
        android:layout_height="407dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/codeAntiSpiral"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/hideCodeAntiSpiral"
        style="@style/buttons"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/hide_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/antispiralprinting"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button1"
        android:gravity="center_horizontal|center_vertical"
        android:padding="5dp"
        android:text="@string/antiSpiral_Heading"
        android:textAlignment="gravity"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

</androidx.constraintlayout.widget.ConstraintLayout>